operations-k8s-dev/infrastructure/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #external-dns.alpha.kubernetes.io/hostname: k8s-public-67396ca3fb-1222567461.eu-west-1.elb.amazonaws.com
    alb.ingress.kubernetes.io/group.name: "public"
spec:
  ingressClassName: public
  rules:
    - host: "dev.grafana.aqazi.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
